Archive2/17/d2c45779468c6d/output
main.cpp:13:31: error: function ‘SkeletalAnimationChannel& SkeletalAnimationChannel::operator=(SkeletalAnimationChannel&&)’ defaulted on its first declaration with an exception-specification that differs from the implicit declaration ‘SkeletalAnimationChannel& SkeletalAnimationChannel::operator=(SkeletalAnimationChannel&&)’
     SkeletalAnimationChannel& operator=(SkeletalAnimationChannel&&) noexcept = default;
                               ^
main.cpp:23:16: error: function ‘Container& Container::operator=(Container&&)’ defaulted on its first declaration with an exception-specification that differs from the implicit declaration ‘Container& Container::operator=(Container&&)’
     Container& operator=( Container&& ) noexcept = default;
                ^
